changes in index.html

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Deeksha Speech therapy solutions</h1>
-    <p>Sample website to test aws</p>
+    <p>Sample website to test aws deployment using github</p>
 </div>
